# vitraag

./: .gitignore  2024-10-21-triweekly-notes.md  CLAUDE.md  CNAME  Gemfile  README  README.md  _config.yml  art.md  bookmarks.html  digitalhealthconcierge.html  feed.xml  greenfairy.html  handoff_data.json  incident.txt  index-new.html  index-old.md  index.html  index.md  news_updater.py  newsletter.xml  package-lock.json  package.json  relationship-manager.html  relationship_manager.html  speaking.html  webpack.config.js  weekly.html
_data/: ai-news.yml  digitalhealth-news.yml  digitalhealth-news.yml.backup-2025-07-09  digitalhealth.yml  extracted_news.json  finance-news.yml  formatted_news.json  handoff_data.json  indexcategories.yml  libardrinks.yml  navigation.yml  notion.yml  pm-news.yml  popular_posts.yml  portfolio.yml  projects.yml  security-news.yml  security-news.yml.backup-2025-07-09
_includes/: analytics-google.html  footer.html  head.html  image.html  kk.html  link-previews.html  nav.html  notes_graph.html  notes_graph.json  portfolio.html  timeline.html  toc.html
_kamals_kitchen/: cover.md  crackedwheat.md  intro.md  jain-food-prep.md  poha.md  salad.md  start.md
_kk/: crackedwheat.md  intro.md  kk_toc.md  poha.md  salad.md  start.md
_layouts/: default.html  frontpage.html  kk.html  kk_cover.html  (+13 more)
data-runners/: .gitignore  news_updater.py  newsletter_generator.py  obsidian_bookmarks_sync.py  obsidian_news_auto.py  obsidian_news_sync.py  pyproject.toml  update_bookmarks.py  update_popular_posts.py
data-runners/content/data/: popular_posts.yml
(+1046 files in other folders)
